--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="stylesheet" href="build/tailwind.css">
   
-    <title>Vite App</title>
+    <title>DR MD YOUNUS ALI</title>
     <style>
       
     </style>
